--- a/css/button-store.css
+++ b/css/button-store.css
@@ -1,12 +1,22 @@
 .button-store {
+  height: 60px;
+  color: #fff;
+  cursor: pointer;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 20px;
+}
+
+.button-store.-add-cart {
+  background-color: transparent;
+  border: 2px solid #fff;
+  width: 220px;
+  box-sizing: border-box;
+  margin-right: 38px;
+}
+
+.button-store.-buy {
   display: inline-block;
   width: 200px;
-  height: 60px;
   background-color: #252c41;
   border: none;
-  cursor: pointer;
-
-  font-family: Arial, Helvetica, sans-serif;
-  color: #fff;
-  font-size: 20px;
 }
