--- a/css/container-store.css
+++ b/css/container-store.css
@@ -1,12 +1,9 @@
 .container-store {
   background-color: #e24647;
-
-  padding: 60px;
-  width: 80%;
+  width: 90%;
+  padding: 60px 60px 0 0;
   position: absolute;
-
   top: 50%;
   left: 50%;
-
   transform: translateX(-50%) translateY(-50%);
 }
