--- a/css/container-store.css
+++ b/css/container-store.css
@@ -1,7 +1,7 @@
 .container-store {
   background-color: #e24647;
   width: 90%;
-  padding: 60px 60px 0 0;
+  padding: 60px 60px 165px 0;
   position: absolute;
   top: 50%;
   left: 50%;
