--- a/css/header-store.css
+++ b/css/header-store.css
@@ -14,7 +14,25 @@
   float: left;
 }
 
-.header-store > .navigation {
+.header-store .search {
+  width: 358px;
+  background-color: transparent;
+  border: none;
+  border-bottom: 1px solid #fff;
+  font-size: 20px;
+  color: #fff;
+  padding-bottom: 8px;
+  outline: none;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.header-store .search::placeholder {
+  color: rgba(255, 255, 255, 0.856);
+  font-size: 20px;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.header-store .navigation {
   float: right;
 }
 
