--- a/css/header-store.css
+++ b/css/header-store.css
@@ -25,10 +25,11 @@
   padding-bottom: 8px;
   outline: none;
   font-family: Arial, Helvetica, sans-serif;
+  vertical-align: bottom;
 }
 
 .header-store .search::placeholder {
-  color: rgba(255, 255, 255, 0.856);
+  color: #fff;
   font-size: 20px;
   font-family: Arial, Helvetica, sans-serif;
 }
@@ -41,21 +42,22 @@
   color: inherit;
   text-decoration: none;
   font-weight: 400;
-  font-size: 21px;
+  font-size: 20px;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   margin-left: 60px;
   position: relative;
-  padding-bottom: 9px;
+  padding-bottom: 8px;
+  display: inline-block;
 }
 
 .header-store .actions:after {
   content: '';
   position: absolute;
-  width: 100%;
-  transform: scaleX(0);
-  height: 1px;
   bottom: 0;
   left: 0;
+  width: 100%;
+  height: 1px;
+  transform: scaleX(0);
   background-color: #fff;
   transform-origin: bottom left;
   transition: transform 200ms ease-out;
