--- a/css/header-store.css
+++ b/css/header-store.css
@@ -15,6 +15,10 @@
   cursor: pointer;
 }
 
+.header-store .navigation {
+  float: right;
+}
+
 .header-store .search {
   width: 358px;
   background-color: transparent;
@@ -32,10 +36,6 @@
   color: #fff;
   font-size: 20px;
   font-family: Arial, Helvetica, sans-serif;
-}
-
-.header-store .navigation {
-  float: right;
 }
 
 .header-store .actions {
@@ -66,4 +66,45 @@
 .header-store .actions:hover:after {
   transform: scaleX(1);
   transform-origin: bottom left;
+}
+
+@media (max-width: 1155px) {
+  .header-store > .title {
+    float: none;
+    text-align: center;
+    margin-bottom: 1em;
+  }
+
+  .header-store .navigation {
+    float: none;
+    text-align: center;
+  }
+}
+
+@media (max-width: 981px) {
+  .header-store .search {
+    display: none;
+  }
+
+  .header-store .actions:nth-child(2) {
+    margin-left: 0;
+  }
+}
+
+@media (max-width: 555px) {
+  .header-store .actions {
+    margin-left: 1em;
+  }
+}
+
+@media (max-width: 463px) {
+  .header-store {
+    margin-left: 1em;
+  }
+}
+
+@media (max-width: 370px) {
+  .header-store .actions {
+    display: none;
+  }
 }
