--- a/css/container-store.css
+++ b/css/container-store.css
@@ -18,6 +18,12 @@
   }
 }
 
+@media (max-width: 1550px) {
+  .container-store {
+    padding-right: 0;
+  }
+}
+
 @media (max-height: 914px) {
   .container-store {
     margin: 0 auto;
