--- a/css/button-store.css
+++ b/css/button-store.css
@@ -43,3 +43,20 @@
   color: #e24647;
   opacity: 0.9;
 }
+
+@media (max-width: 1550px) {
+  .container-buttons {
+    position: static;
+    width: 100%;
+    margin: 0 auto;
+    text-align: center;
+    transform: none;
+  }
+}
+
+@media (max-width: 790px) {
+  .button-store.-add-cart {
+    margin-right: 2px;
+    margin-bottom: 1em;
+  }
+}
