--- a/css/desciption-product.css
+++ b/css/desciption-product.css
@@ -92,6 +92,7 @@
   .description-product {
     display: block;
     width: 60%;
+    min-width: 780px;
     margin: 0 auto;
   }
 
@@ -100,7 +101,24 @@
     text-align: center;
   }
 
+  .description-product > .heart {
+    left: 32px;
+  }
+
   .description-product .more {
-    margin-bottom: 2em;
+    margin-bottom: 4em;
+  }
+}
+
+@media (max-width: 860px) {
+  .description-product {
+    width: 90%;
+    min-width: auto;
+  }
+}
+
+@media (max-width: 430px) {
+  .description-product > .heart {
+    top: 41px;
   }
 }
