--- a/css/base.css
+++ b/css/base.css
@@ -1,3 +1,6 @@
-body {
-  background-color: #252a34;
+html {
+  width: 100%;
+  height: 100%;
+  background: black;
+  background: linear-gradient(to top, #ff2e63, #252a34);
 }
