--- a/css/base.css
+++ b/css/base.css
@@ -1,6 +1,9 @@
-html {
-  width: 100%;
+html,
+body {
   height: 100%;
+}
+
+body {
   background: black;
   background: linear-gradient(to top, #ff2e63, #252a34);
 }
