--- a/css/description-product.css
+++ b/css/description-product.css
@@ -40,16 +40,33 @@
 }
 
 .description-product > .stars {
-  margin-bottom: 10px;
+  margin-bottom: 25px;
 }
 
-.description-product > .stars > .star {
+.description-product .star.-active > .starPNG {
+  display: none;
+}
+
+.description-product .star.-active > .starPNG.-active {
+  display: block;
+}
+
+.description-product > .stars ol {
+  padding-left: 0;
+}
+
+.description-product > .stars .star {
   margin-right: 9px;
   cursor: pointer;
+  display: inline-block;
 }
 
-.description-product > .stars > .star:hover {
+.description-product > .stars .star:hover {
   transform: scale(1.2);
+}
+
+.description-product > .stars .starPNG.-active {
+  display: none;
 }
 
 .description-product > .avaliation {
