--- a/css/base.css
+++ b/css/base.css
@@ -14,3 +14,10 @@ input[type='search']::-webkit-search-results-button,
 input[type='search']::-webkit-search-results-decoration {
   -webkit-appearance: none;
 }
+
+@media (max-width: 370px) {
+  html,
+  body {
+    overflow-x: hidden;
+  }
+}
