--- a/css/description-product.css
+++ b/css/description-product.css
@@ -159,7 +159,7 @@
 
 @media (max-width: 430px) {
   .description-product > .title {
-    margin-bottom: 10px;
+    margin-bottom: 2em;
   }
 
   .description-product > .hearts {
