--- a/css/header-store.css
+++ b/css/header-store.css
@@ -19,19 +19,35 @@
   float: right;
 }
 
-.header-store .actions {
+.header-store .list {
+  display: inline-block;
+  vertical-align: bottom;
+}
+
+.header-store .list > .item.-menu {
+  display: none;
+}
+
+.header-store .list .item {
+  display: inline-block;
+  margin-left: 60px;
+  position: relative;
+  padding-bottom: 8px;
+}
+
+.header-store .action {
   color: inherit;
   text-decoration: none;
   font-weight: 400;
   font-size: 20px;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  margin-left: 60px;
-  position: relative;
-  padding-bottom: 8px;
-  display: inline-block;
 }
 
-.header-store .actions:after {
+.header-store .item.-second {
+  margin-left: 0;
+}
+
+.header-store .action:after {
   content: '';
   position: absolute;
   bottom: 0;
@@ -44,7 +60,7 @@
   transition: transform 200ms ease-out;
 }
 
-.header-store .actions:hover:after {
+.header-store .action:hover:after {
   transform: scaleX(1);
   transform-origin: bottom left;
 }
@@ -73,8 +89,8 @@
     margin-bottom: 3em;
   }
 
-  .header-store .actions:nth-child(2) {
-    margin-left: 0;
+  .header-store .list {
+    padding-left: 0;
   }
 }
 
@@ -83,12 +99,16 @@
     margin-bottom: 1em;
   }
 
-  .header-store .actions {
-    margin-left: 1em;
+  .header-store .list .item {
+    margin-left: 2em;
+  }
+
+  .header-store .item.-second {
+    margin-left: 0;
   }
 }
 
-@media (max-width: 463px) {
+@media (max-width: 478px) {
   .header-store {
     margin-left: 0;
     margin-right: 0;
@@ -96,7 +116,53 @@
 }
 
 @media (max-width: 370px) {
-  .header-store .actions {
-    display: none;
+  .header-store .list > .item.-menu {
+    display: block;
+    margin: 0;
+    width: 40px;
+    height: 40px;
+    background: url('../assets/burger.svg') no-repeat #fff center;
+    background-size: 40px;
+    box-sizing: border-box;
+    text-indent: -9999px;
+    padding: 0;
+    cursor: pointer;
+
+    position: absolute;
+    top: 0;
+    left: 0;
+
+    transform: translateX(-100%);
+
+    transition: transform 300ms 100ms linear;
+  }
+
+  .header-store .list {
+    background: #fff;
+    color: #000;
+    width: 100vw;
+    padding: 40px 0 20px 0;
+    position: absolute;
+    top: 0;
+    right: 0;
+
+    transform: translateX(100%);
+    transition: transform 300ms linear;
+  }
+
+  .header-store .list.-active {
+    transform: translateX(0);
+  }
+
+  .header-store .list.-active .item.-menu {
+    background-image: url(../assets/close.svg);
+    background-size: 65%;
+    transform: translateX(0);
+    transition: none;
+  }
+
+  .header-store .list > .item {
+    display: block;
+    margin: 0;
   }
 }
