--- a/css/container-store.css
+++ b/css/container-store.css
@@ -8,6 +8,7 @@
   top: 50%;
   left: 50%;
   transform: translateX(-50%) translateY(-50%);
+  box-shadow: 0 0 39px 0 rgba(50, 50, 50, 0.36);
 }
 
 @media (max-width: 1700px), (max-height: 914px) {
@@ -18,7 +19,7 @@
   }
 }
 
-@media (max-width: 1550px) {
+@media (max-width: 1580px) {
   .container-store {
     padding-right: 0;
     padding-bottom: 60px;
@@ -30,4 +31,3 @@
     margin: 0 auto;
   }
 }
-
