--- a/css/photo-product.css
+++ b/css/photo-product.css
@@ -5,10 +5,23 @@
   border-radius: 0 150px 150px 0;
   height: 554px;
   vertical-align: middle;
-  padding-left: 60px;
+  padding-left: 6em;
+  position: relative;
 }
 
-@media (max-width: 1550px) {
+.photo-product::before {
+  content: '';
+  position: absolute;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background-color: #fff;
+  z-index: -1;
+  transform: translateX(-100%);
+  box-shadow: inset 0 0 20px 0 rgba(50, 50, 50, 0.36);
+}
+
+@media (max-width: 1580px) {
   .photo-product {
     display: block;
     margin-right: 0;
